SQL 수정 - POST, CONTENT

--- a/활동일지/190711.md
+++ b/활동일지/190711.md
@@ -48,7 +48,8 @@ CREATE TABLE POST
     IMG02       VARCHAR2(20)      NULL, 
     IMG03       VARCHAR2(20)      NULL, 
     CONTENTS    NUMBER            NULL, 
-    REID        NUMBER            NULL   
+    REID        NUMBER            NULL,
+    STAR        VARCHAR2(20)      NULL
 )
 
 CREATE TABLE CONTENT
@@ -69,7 +70,8 @@ CREATE TABLE CONTENT
     ACTOR3      VARCHAR2(50)    NULL, 
     TIME        NUMBER          NULL, 
     COUNTRY     VARCHAR2(20)    NULL, 
-    GRADE       VARCHAR2(50)    NULL
+    GRADE       VARCHAR2(50)    NULL,
+    RATING      NUMBER          NULL
 )
 
 -- SEQUENCE 생성
